--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/include/oatpp"]
-	path = src/include/oatpp
-	url = git@github.com:oatpp/oatpp.git
+[submodule "src/include/crow"]
+	path = src/include/crow
+	url = https://github.com/CrowCpp/Crow.git
