Replace oat with crow in build process

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,10 +4,5 @@ project(website)
 
 add_executable(website main.cpp)
 
-find_package(oatpp 1.3.0 REQUIRED)
-
-target_link_libraries(website
-        PUBLIC oatpp::oatpp
-        PUBLIC oatpp::oatpp-test
-)
-
+find_package(Crow)
+target_link_libraries(website PUBLIC Crow::Crow)
